--- a/.github/workflows/deploy-ghpages.yml
+++ b/.github/workflows/deploy-ghpages.yml
@@ -15,9 +15,12 @@ jobs:
         node-version: 8
     - name: yarn install
       run: yarn install 
-    - name: Setup github token
-      uses: fregante/setup-git-token@v1
+    - name: yarn build
+      run: yarn build
+    - name: Build and Deploy
+      uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Deploy gh-pages
-      run: yarn deploy
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BASE_BRANCH: master # The branch the action should deploy from.
+        BRANCH: gh-pages # The branch the action should deploy to.
+        FOLDER: build # The folder the action should deploy.
